...
		[self setShowsVerticalScrollIndicator: NO];
		
		[self setMinimumZoomScale: 1];
		
		[self setMaximumZoomScale: 1];
		
		[self setAccessibilityIdentifier: @"Stations Scroll View"];
		
		[self setupViewsForSearch: searching];
		
		[[NSNotificationCenter defaultCenter] addObserver: self selector: @selector(numberOfBikeStationsHasChangedNotification:) name: kVETimeFormatterNumberOfBikeStationsHasChangedNotification object: nil];
	}
	
...
